[package]
name = "nasa-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apod-example"
path = "examples/apod.rs"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
serde_qs = "0.12.0"
thiserror = "1.0.56"
